# hello-autogui

./: README.md  clean.py  pyproject.toml
src/main/python/: gui.py  main.py
